--- a/Campañas.html
+++ b/Campañas.html
@@ -88,27 +88,90 @@
 
     <!-- Page Header End -->
 
+    <!-- About -->
+    <div class="container-xxl py-5" style="text-align: justify; font-size: 12pt;">
+        <div class="container">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-3 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="Logo Expo 2.png" height="250" width="320">
+                </div>
+                <div class="col-lg-9 col-md-7 col-sm-8 fadeInUp" data-wow-delay="0.3s" >
+                    <h1 class="display-5 mb-4">Río Grande de San Miguel</h1>
+                    <p class="mb-4">El Río es un elemento vital para todos los seres vivos, es una invaluable fuente de vida y un recurso natural que debemos de cuidar y proteger. 
+                        Es un cuerpo de agua que desempeña un papel crucial en el equilibro de nuestro país, brindando hábitats para una diversidad de especies y 
+                        suministrando agua dulce a comunidades humanas y animales. Sin embargo, en la actualidad, el Río Grande de San Miguel enfrenta numerosas 
+                        amenazas que ponen en peligro su salud y funcionalidad, como la contaminación.</p>
+                    <p class="mb-4">Por ello, concientizar a las personas y comunidades, especialmente las más cercanas al Río Grande, sobre la situación actual del mismo, es de vital 
+                        importancia para lograr un cambio significativo y cumplir con los objetivos deseados.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- About -->
+
     <!--Campañas de concientización-->
     <div style="width:1000px;margin:0px auto;">
-        <center><img src="Logo Expo 2.png" height="250" width="300"></center>
-        <br> <br>
-        <p align="justify">
-        Los Ríos son un elemento vital para todos los seres vivos, son una invaluable fuente de vida y un recurso natural que debemos de cuidar y proteger. 
-        Estos cuerpos de agua desempeñan un papel crucial en el equilibro de nuestro planeta, brindando hábitats para una diversidad de especies
-         y suministrando agua y suministrando agua dulce a comunidades humanas y animales.
-        Sin embargo, en la actualidad, el Río Grande de San Miguel enfrenta numerosas amenazas que ponen en peligro su salud y funcionalidad, como la contaminación.
-         </p>
 
         <p align="justify">
-            Por ello, concientizar a las personas y comunidades, especialmente las más cercanas al Río Grande, sobre la situación 
-        actual del mismo, es de vital importancia para lograr un cambio significativo y cumplir con los objetivos deseados
-        </p>
-
-        <p align="justify">
-            Lo cual, motivó a nuestro equipo de trabajo a implementar, como una solución a este desafío, 
+            Como medida para mitigar la contaminación y motivdos por un cambio hemos implementado, como una solución a este desafío, 
             las campañas de concientización digital por medio de nuestro sitio web, para así aumentar la visibilidad
              de las múltiples problemáticas que presenta el Río Grande y que podemos hacer para ayudar.    
         </p>
+
+            <!-- Team Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <p class="fs-5 fw-bold text-primary">Our Team</p>
+                <h1 class="display-5 mb-5">Dedicated & Experienced Team Members</h1>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <div class="team-text">
+                            <h4 class="mb-0">Doris Jordan</h4>
+                            <p class="text-primary">Landscape Designer</p>
+                            <div class="team-social d-flex">
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <div class="team-text">
+                            <h4 class="mb-0">Johnny Ramirez</h4>
+                            <p class="text-primary">Garden Designer</p>
+                            <div class="team-social d-flex">
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <div class="team-text">
+                            <h4 class="mb-0">Diana Wagner</h4>
+                            <p class="text-primary">Senior Gardener</p>
+                            <div class="team-social d-flex">
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Team End -->
 
         <p align="justify">
             Los siguientes consejos ayudarán a que, desde nuestros hogares, contribuyamos a no contaminar
@@ -152,17 +215,17 @@
 </div>
 <!-- Facts End -->
  
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos recervados.
-                </div>
+<!-- Copyright Start -->
+<div class="container-fluid copyright py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos reservados.
             </div>
         </div>
     </div>
-    <!-- Copyright End -->
+</div>
+<!-- Copyright End -->
 
 
     <!-- Back to Top -->
