--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Paola.jpeg" alt="">
+                        <img class="img-fluid" src="img/Luciana.jpg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Paola Navarrete</h4>
                             <p class="text-primary">Programadora y Diseñadora</p>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Luciana.jpg" alt="">
+                        <img class="img-fluid" src="img/Paola.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Luciana Reyes</h4>
                             <p class="text-primary">Programadora y Diseñadora</p>
@@ -261,17 +261,17 @@
     </div>
     <!-- Team End -->
 
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate!</a>, All Right Reserved.
-                </div>
+<!-- Copyright Start -->
+<div class="container-fluid copyright py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos reservados.
             </div>
         </div>
     </div>
-    <!-- Copyright End -->
+</div>
+<!-- Copyright End -->
 
 
     <!-- Back to Top -->
