--- a/contaminación.html
+++ b/contaminación.html
@@ -229,13 +229,12 @@
 <!-- Facts End -->
 
 
- <!-- Copyright Start -->
+<!-- Copyright Start -->
 <div class="container-fluid copyright py-4">
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate!</a>, All Right Reserved.
-            </div>
+                &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos reservados.
             </div>
         </div>
     </div>
