--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Luz.jpg" alt="">
+                        <img class="img-fluid" src="img/Luz.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Luz Alvarado</h4>
                             <p class="text-primary">Programadora</p>
@@ -458,7 +458,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Kevin.jpg" alt="">
+                        <img class="img-fluid" src="img/Kevin.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Kevin Argueta</h4>
                             <p class="text-primary">Programador</p>
@@ -467,7 +467,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Helen.jpg" alt="">
+                        <img class="img-fluid" src="img/Helen.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Helen Aparicio</h4>
                             <p class="text-primary">Programadora</p>
@@ -484,7 +484,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Adriana.jpg" alt="">
+                        <img class="img-fluid" src="img/Adriana.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Adriana Cordero</h4>
                             <p class="text-primary">Programadora y Diseñadora</p>
@@ -519,7 +519,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Paola.jpg" alt="">
+                        <img class="img-fluid" src="img/Luciana.jpg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Paola Navarrete</h4>
                             <p class="text-primary">Programadora y Diseñadora</p>
@@ -528,7 +528,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Luis.jpg" alt="">
+                        <img class="img-fluid" src="img/Luis.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Luis Argueta</h4>
                             <p class="text-primary">Programador</p>
@@ -537,7 +537,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/Luciana.jpg" alt="">
+                        <img class="img-fluid" src="img/Paola.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Luciana Reyes</h4>
                             <p class="text-primary">Programadora y Diseñadora</p>
@@ -554,7 +554,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos recervados.
+                    &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos reservados.
                 </div>
             </div>
         </div>
