--- a/quote.html
+++ b/quote.html
@@ -164,17 +164,17 @@
     <br><br>
 
 
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos recervados.
-                </div>
+<!-- Copyright Start -->
+<div class="container-fluid copyright py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a class="border-bottom" href="https://superate.org.sv/">¡Supérate! Grupo Q</a>,Todos los derechos reservados.
             </div>
         </div>
     </div>
-    <!-- Copyright End -->
+</div>
+<!-- Copyright End -->
 
 
     <!-- Back to Top -->
