--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="bg-white shadow d-flex align-items-center h-100 px-5" style="min-height: 160px;">
                         <div class="d-flex  datos">
                             <div class="btn-square rounded-circle mx-auto mb-3">
-                                <br><br><img class="img-fluid img-change" src="../RiverSave/img/icon/004-ro.png" alt="Icon">
+                                <br><br><img class="img-fluid img-change" src="./img/icon/004-ro.png" alt="Icon">
                             </div>
                             <div class="ps-3">
                                 <h4></h4>
@@ -172,7 +172,7 @@
                     <div class="bg-white shadow d-flex align-items-center h-100 px-5" style="min-height: 160px;">
                         <div class="d-flex datos">
                             <div class="service-img rounded">
-                                <img class="img-fluid img-change" src="../RiverSave/img/icon/003-agua-contaminada.png" alt="Icon">
+                                <img class="img-fluid img-change" src="./img/icon/003-agua-contaminada.png" alt="Icon">
                             </div>
                             <div class="ps-3">
                                 <h4></h4>
@@ -186,7 +186,7 @@
                     <div class="bg-white shadow d-flex align-items-center h-100 px-5" style="min-height: 160px;">
                         <div class="d-flex  datos">
                             <div class="btn-square rounded-circle mx-auto mb-3">
-                                <img class="img-fluid img-change" src="../RiverSave/img/icon/001-multitud.png" alt="Icon">
+                                <img class="img-fluid img-change" src="./img/icon/001-multitud.png" alt="Icon">
                             </div>
                             <div class="ps-3">
                                 <h4></h4>
