--- a/Cuenca.html
+++ b/Cuenca.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-3 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="../RiverSave/img/Embudo2.png" style="max-height: 25rem;">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="./img/Embudo2.png" style="max-height: 25rem;">
                 </div>
                 <div class="col-lg-9 col-md-7 col-sm-8 fadeInUp" data-wow-delay="0.3s" >
                     <h1 class="display-5 mb-4">Descripción</h1>
@@ -114,7 +114,7 @@
             <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded d-flex h-100">
                     <div class="service-img rounded">
-                        <img class="img-fluid" src="../RiverSave/img/Aramuaca.jpg" alt="">
+                        <img class="img-fluid" src="./img/Aramuaca.jpg" alt="">
                     </div>
                     <div class="service-text rounded p-5">
                         <h4 class="mb-3">Aramuaca</h4>
@@ -125,7 +125,7 @@
             <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item rounded d-flex h-100">
                     <div class="service-img rounded">
-                        <img class="img-fluid" src="../RiverSave/img/Olomega.jpg" alt="">
+                        <img class="img-fluid" src="./img/Olomega.jpg" alt="">
                     </div>
                     <div class="service-text rounded p-5">
                         <h4 class="mb-3">Olomega</h4>
@@ -137,7 +137,7 @@
             <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded d-flex h-100">
                     <div class="service-img rounded">
-                        <img class="img-fluid" src="../RiverSave/img/San_Juan.jpg" alt="">
+                        <img class="img-fluid" src="./img/San_Juan.jpg" alt="">
                     </div>
                     <div class="service-text rounded p-5">
                         <h4 class="mb-3">San Juan</h4>
@@ -148,7 +148,7 @@
             <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item rounded d-flex h-100">
                     <div class="service-img rounded">
-                        <img class="img-fluid" src="../RiverSave/img/Jocotal.jpg" alt="">
+                        <img class="img-fluid" src="./img/Jocotal.jpg" alt="">
                     </div>
                     <div class="service-text rounded p-5">
                         <h4 class="mb-3">El Jocotal</h4>
@@ -185,7 +185,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-4 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="../RiverSave/img/Cordillera.jpg" style="max-height: 25rem;">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="./img/Cordillera.jpg" style="max-height: 25rem;">
                 </div>
                 <div class="col-lg-8 col-md-7 col-sm-8 fadeInUp" data-wow-delay="0.3s" >
                     <h1 class="display-7 mb-4">Norte</h1>
@@ -205,7 +205,7 @@
                     <p class="mb-4">Al <b>Sur</b> está limitada por una pequeña zona de la Bahía de Jiquilisco, que forma la desembocadura del río, en la zona de la bocana La Chepona, y con las colinas de Jucuarán.</p>
                 </div>
                 <div class="col-lg-4 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="../RiverSave/img/Bahía_Usulutan.jpg" style="max-height: 25rem;">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="./img/Bahía_Usulutan.jpg" style="max-height: 25rem;">
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-4 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="../RiverSave/img/Lempa.jpg" style="max-height: 25rem;">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="./img/Lempa.jpg" style="max-height: 25rem;">
                 </div>
                 <div class="col-lg-8 col-md-7 col-sm-8 fadeInUp" data-wow-delay="0.3s" >
                     <h1 class="display-7 mb-4">Oeste</h1>
@@ -238,7 +238,7 @@
                     <p class="mb-4">Al <b>Este</b> por la cuenca del Río Goascorán y los cerros Ventarrón, Yayantique, Juana Pacha y El Arco Comprende gran parte de los municipios del departamento de San Miguel, entre los que se encuentran los de San Miguel, Chirilagua, Quelepa, Moncagua, Chapeltique, Lolotique, Nueva Guadalupe y Chinameca.</p>
                 </div>
                 <div class="col-lg-4 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="../RiverSave/img/Goascorán.jpg" style="max-height: 25rem;">
+                    <img class="img-fluid rounded" data-wow-delay="0.1s" src="./img/Goascorán.jpg" style="max-height: 25rem;">
                 </div>
             </div>
         </div>
