--- a/Campañas.html
+++ b/Campañas.html
@@ -118,25 +118,20 @@
              de las múltiples problemáticas que presenta el Río Grande y que podemos hacer para ayudar.    
         </p>
 
-            <!-- Team Start -->
+    <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-bold text-primary">Our Team</p>
-                <h1 class="display-5 mb-5">Dedicated & Experienced Team Members</h1>
+                <p class="fs-5 fw-bold text-primary"></p>
+                <h1 class="display-5 mb-5">Ayudanos a crear un cambio</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0">Doris Jordan</h4>
-                            <p class="text-primary">Landscape Designer</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <h4 class="mb-0"></h4>
+                            <p class="text-primary">Depositar la basura en su lugar y no en las fuentes hídricas</p>
                         </div>
                     </div>
                 </div>
@@ -144,13 +139,8 @@
                     <div class="team-item rounded">
                         <img class="img-fluid" src="img/team-2.jpg" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0">Johnny Ramirez</h4>
-                            <p class="text-primary">Garden Designer</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <h4 class="mb-0"></h4>
+                            <p class="text-primary">Evitar que los desechos de las fábricas acaben en los ríos</p>
                         </div>
                     </div>
                 </div>
@@ -158,13 +148,46 @@
                     <div class="team-item rounded">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0">Diana Wagner</h4>
-                            <p class="text-primary">Senior Gardener</p>
-                            <div class="team-social d-flex">
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square rounded-circle me-2" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            <h4 class="mb-0"></h4>
+                            <p class="text-primary">Evitar lavar ropa o utensilios en los ríos</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Team End -->
+
+    <!-- Team Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <div class="team-text">
+                            <h4 class="mb-0"></h4>
+                            <p class="text-primary">Desecha los desperdicios de la manera correcta 
+                            y evita la contaminación química del agua</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <div class="team-text">
+                            <h4 class="mb-0"></h4>
+                            <p class="text-primary">No verter sustancias no biodegradables en el desagüe
+                            (aceite, pintura, disolventes de limpieza, químicos)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="team-item rounded">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <div class="team-text">
+                            <h4 class="mb-0"></h4>
+                            <p class="text-primary">Unirse a grupos de reforestación y cuidado ambiental</p>
                         </div>
                     </div>
                 </div>
@@ -174,30 +197,8 @@
     <!-- Team End -->
 
         <p align="justify">
-            Los siguientes consejos ayudarán a que, desde nuestros hogares, contribuyamos a no contaminar
-             los ríos o cualquier otro cuerpo de agua: 
-
-            <ul>
-                <li>Depositar la basura en su lugar y no en las fuentes hídricas</li>
-                <li>Evitar que los desechos de las fábricas acaben en los ríos</li>
-                <li>Evitar lavar ropa o utensilios en los ríos</li>
-                <li>Desecha los desperdicios de la manera correcta 
-                    y evita la contaminación química del agua</li>
-                <li>No verter sustancias no biodegradables en el desagüe
-                     (aceite, pintura, disolventes de limpieza, químicos)</li>
-                <li>Unirse a grupos de reforestación y cuidado ambiental</li>
-            </ul>
-        </p>
-
-
-        <p align="justify">
             Cuidar nuestros ríos es fundamental para un buen futuro. Debemos de tomar conciencia sobre la gestión 
             hídrica adecuada para el Río Grande, la importancia de la cuenca para las comunidades, las problemáticas que se enfrenta y las soluciones que están en nuestra mano, eso es lo que le da sentido al proyecto.
-        </p>
-
-
-        <p align="justify">
-              
         </p>
 
     </div>
