--- a/Geografía.html
+++ b/Geografía.html
@@ -159,9 +159,8 @@
                 <p class="text-justify">El Río Grande de San Miguel inicia su recorrido cerca del cantón Joya Grande con el nombre de Agua Zarca a una elevación de 600 msnm. Fluye inicialmente en dirección sur por aproximadamente 60 km, atravesando diversos municipios del departamento de San Miguel. Posteriormente, en las proximidades de la Laguna Olomega, el río cambia su dirección, recorriendo unos 40 km antes de desembocar en el Océano Pacífico en el departamento de Usulután.</p>
             <br><br>
 
-            <i class="fa fa-compass fa-3x text-primary"></i>                                   
-            <h4 class="mb-0"></h4>
-            <video width="400" height="360" controls>
+            
+            <video width="550" height="auto" controls>
                 <source src="img/Río Grande de San Miguel   Cantón Agua Zarca   El Salvador Centroamérica - VIDEO SV - copia.mp4" type="video/mp4">
                 Tu navegador no soporta la etiqueta de video.
             </video>
