--- a/testimonio.html
+++ b/testimonio.html
@@ -78,38 +78,8 @@
     <!-- Page Header End -->
 
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="fs-5 fw-bold text-primary">Bienvenido al Foro</p>
-                    <h1 class="display-5 mb-5">Comparte tus ideas y opiniones</h1>
-                    <p class="mb-4">Hemos creado el foro con el fin de que personas interesadas en la sostenibilidad y protección del Río
-                     Grande puedan compartir sus ideas, consejos y opiniones que ayuden a mejorar su situación. </p>
-                    
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <img class="img-fluid rounded mb-3" src="img/testimonial-1.jpg" alt="">
-                            <p class="fs-5">La situación del Río Grande es alarmante, por ello es nuestro deber colaborar
-                                 y encontrar una manera de abordar los diferentes desafíos... Leer más...</p>
-                            <h4>Sugeidy Torres</h4>    
-                        </div>
-                        <div class="testimonial-item">
-                            <img class="img-fluid rounded mb-3" src="img/testimonial-2.jpg" alt="">
-                            <p class="fs-5">Existen diferentes proyectos y propuestas que buscan mejorar las condiciones del Río Grande, 
-                                de hecho el Ministerio de Medio ambiente... Leer más...</p>
-                            <h4>Vladimir Buruca</h4>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Testimonial End -->
+    <iframe src="https://riversaves.foroactivo.com/" frameborder="0" width="1300" height="800"></iframe>
+
 
 <!-- Copyright Start -->
 <div class="container-fluid copyright py-4">
