--- a/index.html
+++ b/index.html
@@ -319,11 +319,11 @@
             <div class="row g-4 portfolio-container">
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                     <div class="portfolio-inner rounded">
-                        <img class="img-fluid" src="img/service-2.jpg" alt="">
+                        <img class="img-proy" src="./img/campañas.png" alt="">
                         <div class="portfolio-text">
                             <h4 class="text-white mb-4">Campañas de concientización</h4>
                             <div class="d-flex">
-                                <a class="btn btn-lg-square rounded-circle mx-2" href="../RiverSave/img/service-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-lg-square rounded-circle mx-2" href="./img/Campañas.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-lg-square rounded-circle mx-2" href="Campañas.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -343,11 +343,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="portfolio-inner rounded">
-                        <img class="img-fluid" src="img/service-6.jpg" alt="">
+                        <img class="img-proy" src="img/reforestation.jpeg" alt="">
                         <div class="portfolio-text">
                             <h4 class="text-white mb-4">Reforestación</h4>
                             <div class="d-flex">
-                                <a class="btn btn-lg-square rounded-circle mx-2" href="img/service-6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-lg-square rounded-circle mx-2" href="img/reforestation.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-lg-square rounded-circle mx-2" href="Restauracion.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -403,39 +403,6 @@
 </div>
 </div> Projects End -->
 
-
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="fs-5 fw-bold text-primary">Bienvenido al Foro</p>
-                    <h1 class="display-5 mb-5">Comparte tus ideas y opiniones</h1>
-                    <p class="mb-4">Hemos creado el foro con el fin de que personas interesadas en la sostenibilidad y protección del Río
-                     Grande puedan compartir sus ideas, consejos y opiniones que ayuden a mejorar su situación. </p>
-                    
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <img class="img-fluid rounded mb-3" src="img/testimonial-1.jpg" alt="">
-                            <p class="fs-5">La situación del Río Grande es alarmanta, por ello es nuestro deber colaborar
-                                 y encontrar una manera de abordar los diferentes desafíos... Leer más...</p>
-                            <h4>Sugeidy Torres</h4>    
-                        </div>
-                        <div class="testimonial-item">
-                            <img class="img-fluid rounded mb-3" src="img/testimonial-2.jpg" alt="">
-                            <p class="fs-5">Existen diferentes proyectos y propuestas que buscan mejorar las condiciones del Río Grande, 
-                                de hecho el Ministerio de Medio ambiente... Leer más...</p>
-                            <h4>Vladimir Buruca</h4>
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Testimonial End -->
 <br>
 <br>
 
