--- a/project.html
+++ b/project.html
@@ -82,11 +82,11 @@
             <div class="row g-4 portfolio-container">
                 <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                     <div class="portfolio-inner rounded">
-                        <img class="img-proy" src="../RiverSave/img/Campaña1.png" alt="">
+                        <img class="img-proy" src="./img/campañas.png" alt="">
                         <div class="portfolio-text">
                             <h4 class="text-white mb-4">Campañas de concientización</h4>
                             <div class="d-flex">
-                                <a class="btn btn-lg-square rounded-circle mx-2" href="../RiverSave/img/Campaña1.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-lg-square rounded-circle mx-2" href="./img/Campañas.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-lg-square rounded-circle mx-2" href="Campañas.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
@@ -106,11 +106,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="portfolio-inner rounded">
-                        <img class="img-fluid" src="img/service-6.jpg" alt="">
+                        <img class="img-proy" src="img/reforestation.jpeg" alt="">
                         <div class="portfolio-text">
                             <h4 class="text-white mb-4">Reforestación</h4>
                             <div class="d-flex">
-                                <a class="btn btn-lg-square rounded-circle mx-2" href="img/service-6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                                <a class="btn btn-lg-square rounded-circle mx-2" href="img/reforestation.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-lg-square rounded-circle mx-2" href="Restauracion.html"><i class="fa fa-link"></i></a>
                             </div>
                         </div>
