--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Geografía del Río grande de San Miguel</h1>
+                                    <h1 class="display-1 text-white mb-5 animated slideInDown">Geografía del Río Grande de San Miguel</h1>
                                     <a href="Geografía.html" class="btn btn-primary py-sm-3 px-sm-4">Explorar más</a>
                                 </div>
                             </div>
