--- a/Campañas.html
+++ b/Campañas.html
@@ -105,18 +105,29 @@
                         importancia para lograr un cambio significativo y cumplir con los objetivos deseados.</p>
                 </div>
             </div>
+            <div class="container-xxl py-5">
+                <div class="container">
+                    <div class="row g-5 align-items-center right">
+                        <div class="col-lg-8 col-md-7 col-sm-8 fadeInUp" data-wow-delay="0.3s" >
+                            <h1 class="display-7 mb-4" style="text-align: center;">Nuestro proyecto</h1>
+                            <p class="mb-4" style="text-align: justify;"> Como medida para mitigar la contaminación y motivados por un cambio, hemos implementado como una solución a este desafío, 
+                                las campañas de concientización digital por medio de nuestro sitio web, para así aumentar la visibilidad
+                                de las múltiples problemáticas que presenta el Río Grande y que podemos hacer para ayudar.
+                            </p>            
+                        </div>
+                        <div class="col-lg-4 col-md-5 col-sm-4 wow fadeInUp" data-wow-delay="0.1s">
+                            <img class="img-fluid rounded" data-wow-delay="0.1s" src="./img/campañas.png" style="max-height: 25rem;">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
 <!-- About -->
 
     <!--Campañas de concientización-->
     <div style="width:1000px;margin:0px auto;">
-
-        <p align="justify">
-            Como medida para mitigar la contaminación y motivdos por un cambio hemos implementado, como una solución a este desafío, 
-            las campañas de concientización digital por medio de nuestro sitio web, para así aumentar la visibilidad
-             de las múltiples problemáticas que presenta el Río Grande y que podemos hacer para ayudar.    
-        </p>
 
     <!-- Team Start -->
     <div class="container-xxl py-5">
@@ -128,66 +139,62 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <img class="img-proy" src="img/depositar.png" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0"></h4>
-                            <p class="text-primary">Depositar la basura en su lugar y no en las fuentes hídricas</p>
+                            <h4 class="mb-0" style="text-align: center;">Depositar la basura en su lugar, NO en las fuentes hídricas</h4>
+                            <p class="text-primary"></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <img class="img-proy" src="img/contaminacion.png" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0"></h4>
-                            <p class="text-primary">Evitar que los desechos de las fábricas acaben en los ríos</p>
+                            <h4 class="mb-0" style="text-align: center;">Evitar que los desechos de las fábricas acaben en el río</h4>
+                            <p class="text-primary"></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-proy"  src="img/lavar.png" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0"></h4>
-                            <p class="text-primary">Evitar lavar ropa o utensilios en los ríos</p>
+                            <h4 class="mb-0" style="text-align: center;">Evitar lavar ropa o utensilios en el ríos.</h4>
+                            <p class="text-primary"></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Team End -->
-
-    <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                        <img class="img-proy" src="img/desecha.png" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0"></h4>
-                            <p class="text-primary">Desecha los desperdicios de la manera correcta 
-                            y evita la contaminación química del agua</p>
+                            <h4 class="mb-0" style="text-align: center;">Desecha los desperdicios de la manera correcta y evita la contaminación química del agua</h4>
+                            <p class="text-primary"></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        <img class="img-proy" src="img/verter.png" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0"></h4>
-                            <p class="text-primary">No verter sustancias no biodegradables en el desagüe
-                            (aceite, pintura, disolventes de limpieza, químicos)</p>
+                            <h4 class="mb-0" style="text-align: center;">NO verter sustancias no biodegradables en el desagüe 
+                            (aceite, pintura, disolventes de limpieza, químicos)</h4>
+                            <p class="text-primary"></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                        <img class="img-proy" src="img/unirse.png" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0"></h4>
-                            <p class="text-primary">Unirse a grupos de reforestación y cuidado ambiental</p>
+                            <h4 class="mb-0" style="text-align: center;">Unirse a grupos de reforestación y cuidado ambiental</h4>
+                            <p class="text-primary"></p>
                         </div>
                     </div>
                 </div>
@@ -195,11 +202,6 @@
         </div>
     </div>
     <!-- Team End -->
-
-        <p align="justify">
-            Cuidar nuestros ríos es fundamental para un buen futuro. Debemos de tomar conciencia sobre la gestión 
-            hídrica adecuada para el Río Grande, la importancia de la cuenca para las comunidades, las problemáticas que se enfrenta y las soluciones que están en nuestra mano, eso es lo que le da sentido al proyecto.
-        </p>
 
     </div>
     
@@ -211,6 +213,10 @@
             <div class="col-sm-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                 <h1 class="display-4 text-white">RIVERSAVE</h1>
             </div>
+            <span class="fs-5 fw-semi-bold text-light">Cuidar nuestro río es fundamental para un buen futuro. Debemos de tomar conciencia sobre la gestión 
+                hídrica adecuada para el Río Grande, la importancia de la cuenca para las comunidades, las problemáticas que se enfrenta y las soluciones que 
+                están en nuestra mano, eso es lo que le da sentido a nuetro proyecto.
+            </span>
         </div>
     </div>
 </div>
