--- a/quote.html
+++ b/quote.html
@@ -148,7 +148,7 @@
                         <p class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.9s" style="text-align: justify; font-size: 110%;">Las inundaciones en el río Grande de San Miguel han provocado la destrucción de viviendas y carreteras, con un impacto significativo en las infraestructuras locales.</p>
                         <p class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.9s" style="text-align: justify; font-size: 110%;">Las familias han tenido que evacuar sus hogares debido a las inundaciones, lo que ha creado una crisis en los refugios temporales. El agua contaminada ha aumentado la propagación de enfermedades, afectando gravemente la salud pública en la región.</p>
                 </div>
-
+            </div>
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <center><p class="fs-5 fw-bold text-primary">Problemática en la Agricultura</p></center>
             </div>
@@ -161,7 +161,7 @@
         </div>
     </div>
     <!-- Team End -->
-    <br><br>
+    <br><br><br><br>
 
 
 <!-- Copyright Start -->
