--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Problemáticas</a>
                     <div class="dropdown-menu bg-light m-0">
-                        <a href="Contaminación.html" class="dropdown-item">Calidad del agua</a>
+                        <a href="Contaminacion.html" class="dropdown-item">Calidad del agua</a>
                         <a href="quote.html" class="dropdown-item">Desborde del río</a>
                     </div>
                 </div>
